[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "expense-audit-env"
version = "1.0.0"
description = "OpenEnv-compliant environment for AI expense report auditing agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "expense-audit-env contributors" }]
keywords = ["openenv", "reinforcement-learning", "agent", "finance", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
gym = ["gymnasium>=0.29.0", "numpy>=1.24.0"]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "openai>=1.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.urls]
Repository = "https://github.com/your-handle/expense-audit-env"
"HuggingFace Space" = "https://huggingface.co/spaces/your-handle/expense-audit-env"
"Bug Tracker" = "https://github.com/your-handle/expense-audit-env/issues"

[project.scripts]
expense-audit-validate = "validate:main"
expense-audit-quickstart = "quickstart:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*", "baseline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"
