[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "expense-audit-env"
version = "1.0.0"
description = "OpenEnv-compliant environment for AI expense report auditing agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "expense-audit-env contributors" }]
keywords = ["openenv", "reinforcement-learning", "agent", "finance", "audit"]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"
expense-audit-validate = "validate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*", "baseline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
